@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.12.8 ChangeLog</title>
+		<title>Version 4.12.9 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -10,7 +10,11 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.12.8</span>
+            <br /><span class="auto-style1">Pulse-4.12.9</span>
+            <br />  Pulse-4.12.9
+            <br />  - Added Water Track Speed on DVL Page.
+            <br />  - Added Ship Velocity and Ship WaterMass to View Data VM and View.
+            <br />
             <br />  Pulse-4.12.8
             <br />  - Update PD0 data types to handle any number of beams including 3 beam systems.
             <br />  - In TimeSeries, added SystemSetup Boost Pos and Neg Voltage.
@@ -130,7 +134,12 @@
             <br />   - In PredictionModel, fix bug in GetBurstDataStorage() when calculating number of burst per deployment.
             <br />   - In PredictionModel, fix bug in CalculatePowerBurst() when calculating number of burst per deployment.
             <br />
-            <br /><span class="auto-style1">Pulse-Display-4.11.1</span>
+            <br /><span class="auto-style1">Pulse-Display-4.11.2</span>
+            <br />   Pulse-Display-4.11.2
+            <br />   * In AdcpConnection::TestEthernetConnection(), check if Ethernet Port is created.
+            <br />   - In SeriesType, Added Ship Velocity to Bottom Track and Water Track Time Series.
+            <br />   - In TimeSeries, Added Ship Velocity to Bottom Track and Water Track Time Series.
+            <br />
             <br />   Pulse-Display-4.11.1
             <br />   * In CompassCalViewModel, when getting pre and post points, wait for a reply.
             <br />   - In AdcpConnection, Added EngBeamShowTest().
@@ -208,7 +217,23 @@
             <br />   - In ScreenDataViewModel, added FillInMissingWpData() to fill in data when Water Profile is turned off.
             <br />   - Change the images in PlaybackView.xaml to VisualBrushes.  This decreased startup time dramatically.
             <br />   - In DistanceTraveled, in AccumulateGps() verify a good _FirstGpsPos is set.
-            <br /><span class="auto-style1">RTI-3.4.11</span>
+            <br /><span class="auto-style1">RTI-3.4.12</span>
+            <br />   RTI-3.4.12
+            <br />   * Added decoding ShipVelocity in BottomTrackDataSet::Decode().
+            <br />   * Added setting the Ship Velocity in BottomTrackDataSet::DecodePd0Ensemble().
+            <br />   * In BottomTrackDataSet, Added ShipVelocity to JSON decoding.
+            <br />   * In BaseDataSet, added JSON_STR_BT_SHIPVELOCITY.
+            <br />   * In Pd0BottomTrack, added ShipVelocity and Fixed Instrument Velocity in DecodeRtiEnsemble.
+            <br />   * In DbCommon, added COL_SHIPVELOCITY_DS and COL_SHIPWATERMASS_DS.
+            <br />   * In AdcpDatabaseWrite, Added Ship Velocity and Ship Water Mass to WriteEnsembleDataToDatabase().
+            <br />   * In AdcpDatabaseCodec, Added ShipVelocity and ShipWaterMass to ParseDataTables().
+            <br />   * In Projects, Added ShipVelocity and ShipWaterMass columns to CreateProjectTables().  Bump rev to F.
+            <br />   * In BottomTrackDataSet, Updated GetVelocityMagnitude() and GetVelocityDirection() to handle bad values of 0.0 and ShipVelocity.
+            <br />   * In Pd0FixedLeader, In Decode(), add a check if number of beams is 0, then set to 4.
+            <br />   - In ExportOptions, added Ship Velocity and Ship Water Mass Velocity.
+            <br />   - In CsvExporterWriter, added Ship Velocity and Ship Water Mass Velocity.
+            <br />   - In BottomTrackDataSet, in DecodePd0Ensemble(), do not remap Instrument and Ship velocity data.
+            <br />
             <br />   RTI-3.4.11
             <br />   * In PD0ExporterWriter, fixed bug in PD0 Exporter with multiple configurations.
             <br />   - Added ExportWriter to handle writing a configuration in exporter.
